[package]
name = "fba"
version = "0.1.0"
authors = ["Andrii Pohrebniak <a.pohrebniak@gethatch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
rand = "0.8.3"
tokio = {version = "1.2.0", features = ["full"]}